--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-index.html
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>contact form</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="contact-container">
+        <form action="https://api.web3forms.com/submit" method="POST"class="contact-left">
+            <div class="contact-left-title">
+                <h2>get in touch</h2>
+                <hr>
+            </div>
+            <input type="hidden" name="access_key" value="8b8616b3-5a1c-42d1-b86e-65cfab8d8696">            <input type="text"name="name"placeholder="your name"class="contact-inputs"required>
+            <input type="email"name="email"placeholder="your email"class="contact-inputs"required>
+            <textarea name="message" placeholder="your message"class="contact-inputs"required></textarea>
+                <button type="submit">submit <img src="/assets/arrow.jpg" alt=""></button>
+
+        </form>
+        <div class="contact-right">
+            <img src="/assets/message.jpg" alt="">
+
+        </div>
+    </div>
+    
+</body>
+</html>
+
