--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <input type="hidden" name="access_key" value="8b8616b3-5a1c-42d1-b86e-65cfab8d8696">            <input type="text"name="name"placeholder="your name"class="contact-inputs"required>
             <input type="email"name="email"placeholder="your email"class="contact-inputs"required>
             <textarea name="message" placeholder="your message"class="contact-inputs"required></textarea>
-                <button type="submit">submit <img src="/assets/arrow.jpg" alt=""></button>
+                <button type="submit">submit <img src="./assets/arrow.jpg" alt=""></button>
 
         </form>
         <div class="contact-right">
-            <img src="/assets/message.jpg" alt="">
+            <img src="./assets/message.jpg" alt="">
 
         </div>
     </div>
